--- a/src/Lithnet.Pan.RAProxy/Lithnet.Pan.RAProxy.csproj
+++ b/src/Lithnet.Pan.RAProxy/Lithnet.Pan.RAProxy.csproj
@@ -1,98 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5875B2BD-3621-4E97-9983-AAE6759D70C1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lithnet.Pan.RAProxy</RootNamespace>
-    <AssemblyName>Lithnet.Pan.RAProxy</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  <PropertyGroup>
+    <TargetFramework>net8.0-windows</TargetFramework>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.ServiceProcess" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ConfigSections\PanApiEndpoint.cs" />
-    <Compile Include="ConfigSections\PanApiCollection.cs" />
-    <Compile Include="ConfigSections\UsernameRewriteCollection.cs" />
-    <Compile Include="ConfigSections\RadiusServerCollection.cs" />
-    <Compile Include="ConfigSections\RadiusClientSection.cs" />
-    <Compile Include="ConfigSections\UsernameRewriteSection.cs" />
-    <Compile Include="ConfigSections\RadiusServerSection.cs" />
-    <Compile Include="Exceptions\MissingValueException.cs" />
-    <Compile Include="Exceptions\InvalidRadiusAttributeException.cs" />
-    <Compile Include="Exceptions\UnknownRadiusServerException.cs" />
-    <Compile Include="Exceptions\AggregateUserMappingException.cs" />
-    <Compile Include="Exceptions\UserMappingException.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="Exceptions\PanApiException.cs" />
-    <Compile Include="Logging.cs" />
-    <Compile Include="MessageQueue.cs" />
-    <Compile Include="RadiusAccounting\AccountingListener.cs" />
-    <Compile Include="PanApi\Entry.cs" />
-    <Compile Include="PanApi\Logout.cs" />
-    <Compile Include="PanApi\Login.cs" />
-    <Compile Include="PanApi\Message.cs" />
-    <Compile Include="PanApi\Payload.cs" />
-    <Compile Include="ConfigSections\RAProxyConfigurationSection.cs" />
-    <Compile Include="RadiusAccounting\AccountingRequest.cs" />
-    <Compile Include="RadiusAccounting\RadiusAttribute.cs" />
-    <Compile Include="RAProxyService.cs">
+    <Compile Update="RAProxyService.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="RAProxyService.Designer.cs">
+    <Compile Update="RAProxyService.Designer.cs">
       <DependentUpon>RAProxyService.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PanApi\UidMessage.cs" />
-    <Compile Include="ConfigSections\Config.cs" />
-    <Compile Include="WinApi\ExtendedNameFormat.cs" />
-    <Compile Include="WinApi\NativeMethods.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters" Version="1.3.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="8.0.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
